fix: design upadtes on MultiSelectOption - hover state, spacing | MenuFooter and ListBox: spacing

--- a/packages/select/src/FilterMultiSelect/components/MenuLayout/MenuFooter/MenuFooter.scss
+++ b/packages/select/src/FilterMultiSelect/components/MenuLayout/MenuFooter/MenuFooter.scss
@@ -3,7 +3,8 @@
 
 .footer {
   border-top: 1px solid rgba($color-gray-600-rgb, 0.1);
-  gap: $spacing-sm;
+  padding-top: $spacing-sm;
+  gap: $spacing-xs;
   display: inline-flex;
   width: 100%;
 }
